--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 logging.level.root=INFO
+logging.pattern.level=%2p [%X{traceId:-}]
 
 database.name=${DB_NAME:signal-hub}
-database.host=${DB_HOST:localhost}
+database.host=${DATABASE_WRITER_HOST:localhost}
 database.port=${DB_PORT:5432}
 database.username=${DB_USER:postgres}
 database.password=${DB_PASSWORD:postgres}
