--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,4 @@ spring.r2dbc.pool.initial-size=5
 spring.r2dbc.pool.enabled=true
 spring.data.r2dbc.repositories.enabled=true
 
-pdnd.history-cleanup.delay-days=30
+pdnd.history-cleanup.delay-hours=30
